--- a/hermes/hermes-web/src/main/webapp/css/bootstrap/bootstrap-cerulean.css
+++ b/hermes/hermes-web/src/main/webapp/css/bootstrap/bootstrap-cerulean.css
@@ -1,7 +1,7 @@
-@import url(https://fonts.googleapis.com/css?family=Karla|Ubuntu);
+
 /*!
  * Bootstrap v2.0.4
- *
+ *@import url(https://fonts.googleapis.com/css?family=Karla|Ubuntu);
  * Copyright 2012 Twitter, Inc
  * Licensed under the Apache License v2.0
  * http://www.apache.org/licenses/LICENSE-2.0
@@ -134,7 +134,7 @@ textarea {
 }
 body {
   margin: 0;
-  font-family: Verdana,"Helvetica Neue","Ubuntu", Helvetica, Arial, sans-serif;
+  font-family: 宋体,Verdana,"Helvetica Neue","Ubuntu", Helvetica, Arial, sans-serif;
   font-size: 13px;
   line-height: 18px;
   color: #555555;
